<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_toolbar_bg_small"
        android:orientation="vertical">

        <include android:id="@+id/toolbar"
            layout="@layout/common_toolbar">
        </include>

        <RadioGroup
            android:padding="5dp"
            android:layout_below="@id/title"
            android:id="@+id/top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="visible"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/wonderful_moment"
                style="@style/commom_bar_bottom_title_style"
                android:text="@string/flash_moment"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/exigency_video"
                style="@style/commom_bar_bottom_title_style"
                android:text="@string/urgent_video" />

            <RadioButton
                android:id="@+id/circulate_video"
                style="@style/commom_bar_bottom_title_style"
                android:text="@string/loop_video"/>


        </RadioGroup>
    </LinearLayout>

    <include layout="@layout/content_my_recorder" />

</LinearLayout>