<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/common_bar"
        layout="@layout/common_toolbar">
    </include>

    <ImageView
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_thumbnail"
        android:src="@drawable/video_thumb"
        android:scaleType="fitXY"/>

  <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/meida_send_ll"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="微信"/>
        <TextView
            android:id="@+id/weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="微博"/>
        <TextView
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="QQ"/>
    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/media_delete_ll"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textColor="@color/grey"
            android:text="您确定要删除吗"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/home_bottom_cancel"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:text="取消"
                android:background="@color/info_bottom_black"
                />

            <View android:layout_height="match_parent"
                android:layout_width="2dp"
                android:background="@color/white"/>
            <Button
                android:id="@+id/home_bottom_sure"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:text="确定"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@color/info_bottom_red"
                />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/item_detail"
        android:id="@+id/media_info_ll"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:id="@+id/mediadate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="日期:"/>
        <TextView
            android:id="@+id/mediaaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="地点:"/>
        <TextView
            android:id="@+id/mediasize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="大小:未知"
            />
        <TextView
            android:id="@+id/mediaduration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="时长:未知"/>
    </LinearLayout>

    <RadioGroup
        android:paddingTop="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/bar_title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/attr"
            style="@style/detail_bottom_title_style"
            android:text="@string/attr"
            />

        <RadioButton
            android:id="@+id/send"
            style="@style/detail_bottom_title_style"
            android:text="@string/send" />

        <RadioButton
            android:id="@+id/delete"
            style="@style/detail_bottom_title_style"
            android:text="@string/delete"/>

        <RadioButton
            android:id="@+id/download"
            style="@style/detail_bottom_title_style"
            android:visibility="visible"
            android:text="@string/download"/>
    </RadioGroup>
</RelativeLayout>